--- a/css/index.css
+++ b/css/index.css
@@ -86,14 +86,14 @@
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
+  width: 0;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
   border: 1px solid #004D40;
   border-left: none;
   border-bottom: none;
-  z-index: 2;
+  z-index: 0;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
 .menu ul li {
@@ -104,6 +104,8 @@
 }
 .menu--open {
   display: block;
+  width: 350px;
+  z-index: 2;
 }
 html,
 body {
